methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:8: error: Unit does not take parameters
    marque()
          ^